--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
       </div>
     </div>
 
-      <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
-        <div class="vertical-alignment media">
-          <img class="media__img media__img--stacked" src="http://placehold.it/100x100" alt="image">
-          <h3 class="pad-t push-0 giga title-colour">Customize</h3>
-          <p class="body-copy-colour text-width-1 micro">Customize your creative team</p>
-        </div>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
+      <div class="vertical-alignment media">
+        <img class="media__img media__img--stacked no-print" src="http://placehold.it/100x100" alt="image">
+        <h3 class="pad-t push-0 giga title-colour">Customize</h3>
+        <p class="body-copy-colour text-width-1 micro">Customize your creative team</p>
       </div>
-      <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
-        <div class="vertical-alignment media">
-          <img class="media__img media__img--stacked" src="http://placehold.it/100x100" alt="image">
-          <h3 class="pad-t push-0 giga title-colour">Manage</h3>
-          <p class="body-copy-colour text-width-1 micro">Manage your projects and media</p>
-        </div>
+    </div>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
+      <div class="vertical-alignment media">
+        <img class="media__img media__img--stacked no-print" src="http://placehold.it/100x100" alt="image">
+        <h3 class="pad-t push-0 giga title-colour">Manage</h3>
+        <p class="body-copy-colour text-width-1 micro">Manage your projects and media</p>
       </div>
-      <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
-        <div class="vertical-alignment media">
-          <img class="media__img media__img--stacked" src="http://placehold.it/100x100" alt="image">
-          <h3 class="pad-t push-0 giga title-colour">Analyze</h3>
-          <p class="body-copy-colour text-width-1 micro">View project analysis (metrics)</p>
-        </div>
+    </div>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
+      <div class="vertical-alignment media">
+        <img class="media__img media__img--stacked no-print" src="http://placehold.it/100x100" alt="image">
+        <h3 class="pad-t push-0 giga title-colour">Analyze</h3>
+        <p class="body-copy-colour text-width-1 micro">View project analysis (metrics)</p>
       </div>
+    </div>
 
     <div class="unit xs-1 s-1 m-1 l-1 bucket-colour-1 text-center bucket-box">
       <div class="vertical-alignment text-width-2">
@@ -76,7 +76,7 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
-      <img class="push-0 vertical-alignment media__img" src="http://placehold.it/100x100" alt="image">
+      <img class="push-0 vertical-alignment media__img no-print" src="http://placehold.it/100x100" alt="image">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
@@ -86,7 +86,7 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-push-m-1-2 unit-push-l-1-2 text-center bucket-box media">
-      <img class="push-0 vertical-alignment media__img" src="http://placehold.it/100x100" alt="image">
+      <img class="push-0 vertical-alignment media__img no-print" src="http://placehold.it/100x100" alt="image">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
@@ -96,7 +96,7 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
-      <img class="push-0 vertical-alignment media__img" src="http://placehold.it/100x100" alt="image">
+      <img class="push-0 vertical-alignment media__img no-print" src="http://placehold.it/100x100" alt="image">
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
       <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
