--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
@@ -17,7 +19,7 @@
 
 <body>
 
-  <header class="masthead grid grid-middle micro">
+  <header class="masthead grid grid-middle micro background-purple nav-font">
     <div class="unit xs-1 s-1 m-1-3 l-2-4 text-center island-1-2">
       <h1 class="push-0 mega"><a href="index.html">StudioRoom</a></h1>
     </div>
@@ -45,21 +47,21 @@
 
     <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
       <div class="vertical-alignment media">
-        <img class="media__img media__img--stacked no-print" src="http://placehold.it/100x100" alt="image">
+        <img class="media__img media__img--stacked no-print" src="images/customize-icon.png" alt="image">
         <h3 class="pad-t push-0 giga title-colour">Customize</h3>
         <p class="body-copy-colour text-width-1 micro">Customize your creative team</p>
       </div>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
       <div class="vertical-alignment media">
-        <img class="media__img media__img--stacked no-print" src="http://placehold.it/100x100" alt="image">
+        <img class="media__img media__img--stacked no-print" src="images/manage-icon.png" alt="image">
         <h3 class="pad-t push-0 giga title-colour">Manage</h3>
         <p class="body-copy-colour text-width-1 micro">Manage your projects and media</p>
       </div>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 push-0 bucket-padding text-center bucket-box">
       <div class="vertical-alignment media">
-        <img class="media__img media__img--stacked no-print" src="http://placehold.it/100x100" alt="image">
+        <img class="media__img media__img--stacked no-print" src="images/analyze-icon.png" alt="image">
         <h3 class="pad-t push-0 giga title-colour">Analyze</h3>
         <p class="body-copy-colour text-width-1 micro">View project analysis (metrics)</p>
       </div>
@@ -76,30 +78,30 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
-      <img class="push-0 vertical-alignment media__img no-print" src="http://placehold.it/100x100" alt="image">
+      <img class="push-0 vertical-alignment media__img no-print" src="images/free-icon.png" alt="image">
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
-      <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 center island-double bucket-box background-purple ">
+      <div class="micro text-width-2 bucket-padding vertical-alignment text-colour-white">
         <h3>FREE</h3>
         <p>For those still curious as to how StudioRoom will change your workflow. Give it a try!</p>
       </div>
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-push-m-1-2 unit-push-l-1-2 text-center bucket-box media">
-      <img class="push-0 vertical-alignment media__img no-print" src="http://placehold.it/100x100" alt="image">
+      <img class="push-0 vertical-alignment media__img no-print" src="images/pro-icon.png" alt="image">
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 bucket-colour-2 center island-double bucket-box">
-      <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 unit-pull-m-1-2 unit-pull-l-1-2 center island-double bucket-box background-purple">
+      <div class="micro text-width-2 bucket-padding vertical-alignment text-colour-white">
         <h3>PRO</h3>
         <p>For the active individual looking to collaborate like a pro! This is the package for you!</p>
       </div>
     </div>
 
     <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center bucket-box media">
-      <img class="push-0 vertical-alignment media__img no-print" src="http://placehold.it/100x100" alt="image">
+      <img class="push-0 vertical-alignment media__img no-print" src="images/plus-icon.png" alt="image">
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 bucket-colour-2 center island-double bucket-box">
-      <div class="body-copy-colour micro text-width-2 bucket-padding vertical-alignment">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 center island-double bucket-box background-purple">
+      <div class="micro text-width-2 bucket-padding vertical-alignment text-colour-white">
         <h3>PLUS</h3>
         <p>For the seasoned professional looking to maximize efficiency & get the most out of StudioRoom!</p>
       </div>
