--- a/tour.html
+++ b/tour.html
@@ -11,7 +11,7 @@
   <link href="css/colour.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <title>StudioRoom - Effortless Collaboration</title>
 </head>
 
@@ -97,7 +97,7 @@
     </div>
 
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
-      <h6 class="micro">Socials</h6>
+      <h4 class="micro">Socials</h4>
       <ul class="micro list-group">
         <li><a href="https://www.facebook.com/ryannickpurdy">facebook</a></li>
         <li><a href="https://www.instagram.com/ryannickpurdy/">instagram</a></li>
@@ -105,7 +105,7 @@
       </ul>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
-      <h6 class="micro">Contact</h6>
+      <h4 class="micro">Contact</h4>
       <ul class="micro list-group" role="contentinfo">
         <li><a href="mailto:hello@studioroom.com">hello@studioroom.com</a></li>
         <li><a href="tel:415-465-5985">415-465-5985</a></li>
@@ -114,7 +114,7 @@
       </ul>
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
-      <h6 class="micro">Sitemap</h6>
+      <h4 class="micro">Sitemap</h4>
       <ul class="micro list-group">
         <li><a href="index.html">home</a></li>
         <li><a href="tour.html">tour</a></li>
