--- a/signup.html
+++ b/signup.html
@@ -84,6 +84,8 @@
           </div>
           <div class="pad-t pad-b-2">
             <button class="background-white" type="submit"><strong>SUBMIT</strong></button>
+          </div>
+          <div>
             <input type="hidden" name="_next" value="http://ryannicholaspurdy.github.io/dsn1675-saas-website/thankyou.html">
           </div>
         </div>
