--- a/thankyou.html
+++ b/thankyou.html
@@ -42,6 +42,7 @@
 
     <div class="unit xs-1 s-1 m-1 l-1 text-center pad-t-2">
       <h1 class="title-colour yotta">Thank you for signing up for StudioRoom!</h1>
+    </div>
 
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h4 class="micro">Socials</h4>
