--- a/thankyou.html
+++ b/thankyou.html
@@ -40,8 +40,9 @@
 
   <main role="main" class="grid" id="main">
 
-    <div class="unit xs-1 s-1 m-1 l-1 text-center pad-t-2">
-      <h1 class="title-colour yotta">Thank you for signing up for StudioRoom!</h1>
+    <div class="unit xs-1 s-1 m-1 l-1 text-center pad-top-double pad-bottom-double">
+      <h1 class="title-colour yotta pad-top-double pad-bottom-double">Thank you for signing up for StudioRoom!</h1>
+      <img class="pad-top-double pad-bottom-double" src="images/check.png" alt="checkmark image">
     </div>
 
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
