--- a/pricing.html
+++ b/pricing.html
@@ -115,7 +115,7 @@
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h4 class="micro">Contact</h4>
-      <ul class="micro list-group" role="contentinfo">
+      <ul class="micro list-group">
         <li><a href="mailto:hello@studioroom.com">hello@studioroom.com</a></li>
         <li><a href="tel:415-465-5985">415-465-5985</a></li>
         <li>© Copyrihgt SAAS</li>
