--- a/signup.html
+++ b/signup.html
@@ -55,6 +55,10 @@
           <h3 class="kilo"><label for="email">Email</label></h3>
           <input id="email" type="email" name="email" required placeholder="youremail@email.com">
         </div>
+        <div class="pad-t">
+          <h3 class="kilo"><label for="username">Username</label></h3>
+          <input id="username" name="username" required placeholder="choose a username">
+        </div>
         <div class="pad-t pad-b-2">
           <h3 class="kilo"><label for="password">Password</label></h3>
           <input id="password" name="password" required placeholder="choose a password">
@@ -68,22 +72,60 @@
               <option>Plus Plan</option>
             </select>
           </div>
-          <div class="pad-t">
-            <fieldset>
-              <legend>Select Your Gender</legend>
-              <input id="man" name="happy" type="radio" name="feels">
-              <label for="man">Male</label>
-
-              <input id="female" type="radio" name="feels">
-              <label for="female">Female</label>
-            </fieldset>
+          <div class="pad-t-2">
+            <h3 class="kilo"><label for="subject">Select your payment method</label></h3>
+            <select id="subject" name="_subject">
+              <option>Visa</option>
+              <option>Mastercard</option>
+              <option>Paypal</option>
+              <option>American Express</option>
+            </select>
           </div>
-          <div class="">
+          <div class="pad-t">
+            <h3 class="kilo"><label for="cardnumber">Enter your card number</label></h3>
+            <input id="cardnumber" name="cardnumber" required placeholder="card number">
+          </div>
+          <div class="pad-t-2">
+            <h3 class="kilo"><label for="subject">Expiration date</label></h3>
+            <select id="subject" name="_subject">
+              <option>Month</option>
+              <option>January</option>
+              <option>February</option>
+              <option>March</option>
+              <option>April</option>
+              <option>May</option>
+              <option>June</option>
+              <option>July</option>
+              <option>August</option>
+              <option>September</option>
+              <option>October</option>
+              <option>November</option>
+              <option>December</option>
+            </select>
+          </div>
+          <div>
+            <select id="subject" name="_subject">
+              <option>Year</option>
+              <option>2015</option>
+              <option>2016</option>
+              <option>2017</option>
+              <option>2018</option>
+              <option>2019</option>
+              <option>2020</option>
+              <option>2021</option>
+              <option>2022</option>
+              <option>2023</option>
+              <option>2024</option>
+              <option>2025</option>
+              <option>2026</option>
+            </select>
+          </div>
+          <div>
             <label for="message">Questions? Ask Away!</label>
             <textarea id="message" name="message"></textarea>
           </div>
           <div class="pad-t pad-b-2">
-            <button class="background-white" type="submit"><strong>SUBMIT</strong></button>
+            <button class="background-white" type="submit"><strong>CREATE ACCOUNT</strong></button>
           </div>
           <div>
             <input type="hidden" name="_next" value="http://ryannicholaspurdy.github.io/dsn1675-saas-website/thankyou.html">
@@ -102,7 +144,7 @@
     </div>
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center pad-t bucket-colour-2 footer-text">
       <h4 class="micro">Contact</h4>
-      <ul class="micro list-group" role="contentinfo">
+      <ul class="micro list-group">
         <li><a href="mailto:hello@studioroom.com">hello@studioroom.com</a></li>
         <li><a href="tel:415-465-5985">415-465-5985</a></li>
         <li>© Copyrihgt SAAS</li>
